--- a/src/components/Projets/projets.scss
+++ b/src/components/Projets/projets.scss
@@ -23,21 +23,16 @@
     border-top-left-radius: 15%;
     border-top-right-radius: 5%;
     border-bottom-left-radius: 5%;
-    box-shadow: 1px 1px 30px 7px #ff00005d;
+    box-shadow: 1px 1px 30px 7px #00000094;
   }
 
   &__card:hover {
-    filter: blur(2px);
     -webkit-transition: 0.3s ease-in-out;
     transition: 0.3s ease-in-out;
     -webkit-transform: scale(1);
     transform: scale(1.1);
   }
 
-  div:hover {
-    filter: grayscale(0%);
-    background-color: rgba(111, 0, 255, 0.089);
-  }
 
   &__title {
     list-style: none;
@@ -138,35 +133,21 @@
     justify-content: center;
   
     &__card {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-between;
-      background-color: rgba(255, 0, 0, 0.041);
+
       margin-bottom: 5rem;
       margin-top: 5rem;
       width: 25rem;
       height: 30rem;
       margin-left: 10rem;
       margin-right: 10rem;
-      border-bottom-right-radius: 15%;
-      border-top-left-radius: 15%;
-      border-top-right-radius: 5%;
-      border-bottom-left-radius: 5%;
-      box-shadow: 1px 1px 30px 7px #ff00005d;
+
     }
   
     &__card:hover {
-      filter: blur(2px);
       -webkit-transition: 0.3s ease-in-out;
       transition: 0.3s ease-in-out;
       -webkit-transform: scale(1);
       transform: scale(1.1);
-    }
-  
-    div:hover {
-      filter: grayscale(0%);
-      background-color: rgba(111, 0, 255, 0.089);
     }
   
     &__title {
